--- a/resources/stylesheets/docs.scss
+++ b/resources/stylesheets/docs.scss
@@ -62,6 +62,12 @@ nav {
   }
 }
 
+section.constructor:nth-of-type(n+2),
+section.method:nth-of-type(n+2) {
+  border-top: 1px solid #ddd;
+  margin-top: 50px;
+}
+
 table {
   @extend .table, .table-striped, .table-hover;
 
@@ -81,30 +87,6 @@ table {
     tfoot {
       tr {
         background-color: darken(#ecf0f1, 20%);
-      }
-    }
-  }
-}
-
-.examples {
-  table {
-    th, td {
-      width: 40%;
-
-      &:last-child {
-        width: 20%;
-      }
-    }
-
-    tr {
-      td {
-        transition: color 0.5s;
-        transition: background-color 0.5s;
-      }
-
-      &.highlight td {
-        color: #000;
-        background-color: #ff8 !important;
       }
     }
   }
@@ -145,5 +127,60 @@ table {
     table {
       display: table;
     }
+  }
+}
+
+.CodeMirror {
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.CodeMirror-scroll {
+  overflow-y: hidden;
+  overflow-x: auto;
+}
+
+.CodeMirror-linebackground {
+  transition: background-color 1s;
+
+  &.passed {
+    background-color: #dfd;
+  }
+
+  &.failed {
+    background-color: #fdd;
+  }
+
+  &.highlight {
+    background-color: #ff8 !important;
+  }
+}
+
+.CodeMirror-gutters {
+  width: 30px;
+  background-color: #fff;
+}
+
+div.gutter-marker {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+
+  &.passed {
+    color: #080;
+  }
+
+  &.failed {
+    color: #f00;
+  }
+}
+
+pre {
+  color: #000;
+
+  transition: background-color 1s;
+
+  &.highlight {
+    background-color: #ff8 !important;
   }
 }
