--- a/resources/_examples.js.mustache
+++ b/resources/_examples.js.mustache
@@ -23,9 +23,10 @@ describe('{{shortName}}', function() {
       {{/hasCustomHandler}}
     });
 
-    spec.exampleId = '{{identifier}}-{{id}}';
-    spec.actual = '{{{actualEscaped}}}';
-    spec.expected = '{{{expectedEscaped}}}';
+    spec.suiteId    = '{{identifier}}';
+    spec.exampleId  = '{{identifier}}-{{id}}';
+    spec.actual     = '{{{actualEscaped}}}';
+    spec.expected   = '{{{expectedEscaped}}}';
     spec.lineNumber = {{lineNumber}};
   }());
   {{/list}}
