fixed description in default template

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -65,7 +65,7 @@
             <article>
                 {{#description}}
                 <section class="description">
-                    {{{.}}}
+                    {{{description}}}
                 </section>
                 {{/description}}
 
