--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -4,7 +4,7 @@
 <head>
     <title>{{name}}</title>
 
-    <link rel="stylesheet" type="text/css" href="http://yandex.st/highlightjs/7.3/styles/default.min.css" />
+    <link rel="stylesheet" type="text/css" href="http://agorbatchev.typepad.com/pub/sh/3_0_83/styles/shThemeDefault.css" />
     <link rel="stylesheet" type="text/css" href="docs.css" />
     <script src="http://pivotal.github.io/jasmine/lib/jasmine-1.3.1/jasmine.js"></script>
     <script src="http://lodash.com/_js/lodash.js"></script>
@@ -12,7 +12,8 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://danieltao.com/HighTables/hightables.js"></script>
-    <script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
+    <script src="http://agorbatchev.typepad.com/pub/sh/3_0_83/scripts/shCore.js" type="text/javascript"></script>
+    <script src="http://agorbatchev.typepad.com/pub/sh/3_0_83/scripts/shBrushJScript.js" type="text/javascript"></script>
     <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="docs.js"></script>
 
@@ -79,7 +80,7 @@
                     <div class="signature">
                         <h3>Signature</h3>
 
-                        <pre><code>{{{signature}}}</code></pre>
+                        <pre class="brush: js">{{{signature}}}</pre>
 
                         <table id="{{name}}-parameters">
                             <thead>
@@ -121,7 +122,7 @@
                         <h3>Examples</h3>
 
                         {{#examples}}
-                        <pre><code>{{{code}}}</code></pre>
+                        <pre class="brush: js">{{{code}}}</pre>
 
                         <table id="{{name}}-examples">
                             <thead>
@@ -151,7 +152,7 @@
                         <h3>Benchmarks</h3>
 
                         {{#benchmarks}}
-                        <pre><code>{{{code}}}</code></pre>
+                        <pre class="brush: js">{{{code}}}</pre>
 
                         <table id="{{identifier}}-perf-tests">
                             <!-- Gah, HighTables is stupid... doesn't account for <thead> :( -->
