--- a/resources/stylesheets/docs.css
+++ b/resources/stylesheets/docs.css
@@ -338,14 +338,14 @@ hr {
 p {
   margin: 0 0 10.5px; }
 
-.lead, header .description {
+.lead, header .description, section.description p {
   margin-bottom: 21px;
   font-size: 17.25px;
   font-weight: 200;
   line-height: 1.4; }
 
 @media (min-width: 768px) {
-  .lead, header .description {
+  .lead, header .description, section.description p {
     font-size: 22.5px; } }
 small {
   font-size: 85%; }
@@ -6408,8 +6408,6 @@ table th p, table td p {
 
 .CodeMirror-linebackground {
   transition: background-color 1s; }
-  .CodeMirror-linebackground.passed {
-    background-color: #dfd; }
   .CodeMirror-linebackground.failed {
     background-color: #fdd; }
   .CodeMirror-linebackground.highlight {
