--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -42,6 +42,7 @@
                 <nav>
                     <ul>
                         {{#namespaces}}
+                        {{^excludeFromDocs}}
                         <li class="nav-header">
                             {{#constructorMethod}}
                             <a href="#{{identifier}}">{{name}}</a>
@@ -55,6 +56,7 @@
                         <li><a href="#{{identifier}}">{{shortName}}</a></li>
                         {{/excludeFromDocs}}
                         {{/members}}
+                        {{/excludeFromDocs}}
                         {{/namespaces}}
                     </ul>
                 </nav>
