added support for testing members of private namespaces (see #13)

--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -19,6 +19,9 @@ env.addReporter(new reporterType({
 
 {{#privateMembers}}
 var {{shortName}} = {{{source}}};
+{{#methods}}
+{{longName}} = {{{source}}};
+{{/methods}}
 {{/privateMembers}}
 
 {{#namespaces}}
