--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -126,7 +126,7 @@
                         <h3>Examples</h3>
 
                         {{#examples}}
-                        <textarea id="source-{{identifier}}">{{{code}}}</textarea>
+                        <textarea class="source-examples" id="source-{{identifier}}">{{{code}}}</textarea>
                         {{/examples}}
                     </div>
                     {{/hasExamples}}
