forgot to include full private namespaces in benchmarks

--- a/resources/benchmarks.js.mustache
+++ b/resources/benchmarks.js.mustache
@@ -15,6 +15,9 @@ var suite      = new Benchmark.Suite(),
 
 {{#privateMembers}}
 var {{shortName}} = {{{source}}};
+{{#methods}}
+{{longName}} = {{{source}}};
+{{/methods}}
 {{/privateMembers}}
 
 {{#docs}}
