--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/codemirror/3.14.0/codemirror.css" />
     <link rel="stylesheet" type="text/css" href="docs.css" />
+    <link rel="stylesheet" type="text/css" href="examples.css" />
     <script src="//pivotal.github.io/jasmine/lib/jasmine-1.3.1/jasmine.js"></script>
     <script src="//lodash.com/_js/lodash.js"></script>
     <script src="//benchmarkjs.com/_js/benchmark.js"></script>
