forgot to include private members in generated docs

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -159,6 +159,13 @@
                     {{/hasBenchmarks}}
 
                     <script type="text/javascript">
+                      {{#privateMembers}}
+                      var {{shortName}} = {{{source}}};
+                      {{#methods}}
+                      {{longName}} = {{{source}}};
+                      {{/methods}}
+                      {{/privateMembers}}
+
                       {{> examples}}
                       {{> benchmarks}}
                     </script>
