--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -1,5 +1,5 @@
 {{#globals}}
-global['{{{variable}}}'] = require(path.join(process.cwd(), './{{library}}'));
+global['{{{variable}}}'] = require('{{library}}');
 {{/globals}}
 
 global['{{{variable}}}'] = require('{{{filePath}}}');
