fixed --globals require paths (see #37)

--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -1,5 +1,5 @@
 {{#globals}}
-global['{{{variable}}}'] = require('{{library}}');
+global['{{{variable}}}'] = require('{{{library}}}');
 {{/globals}}
 
 global['{{{variable}}}'] = require('{{{filePath}}}');
