small step towards #46

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -94,6 +94,8 @@
 
                         <pre>{{{highlightedSignature}}}</pre>
 
+                        <pre class="function-source" id="source-{{identifier}}">{{{highlightedSource}}}</pre>
+
                         <table id="{{name}}-parameters">
                             <thead>
                                 <tr>
