made searching a bit more robust

--- a/resources/_typeSection.js.mustache
+++ b/resources/_typeSection.js.mustache
@@ -1,4 +1,4 @@
-<section class="typedef" id="{{identifier}}">
+<section class="typedef" id="{{identifier}}" data-filter="{{name}}">
     <h1>{{name}}</h1>
 
     {{{description}}}
