fixed duplicate IDs in generated docs

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -136,7 +136,7 @@
                         <h3>Examples</h3>
 
                         {{#examples}}
-                        <pre class="source-examples" id="source-{{identifier}}">{{{highlightedCode}}}</pre>
+                        <pre class="source-examples" id="examples-{{identifier}}">{{{highlightedCode}}}</pre>
                         {{/examples}}
                     </div>
                     {{/hasExamples}}
