let's go w/ 'Functions' rather than 'Namespaces'

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -49,7 +49,7 @@
         <div class="layout">
             <div class="index">
                 <nav>
-                    <h2>Namespaces</h2>
+                    <h2>Functions</h2>
                     <ul>
                         {{#namespaces}}
                         {{^excludeFromDocs}}
