don't escape property descriptions (they use Markdown)

--- a/resources/_typeSection.js.mustache
+++ b/resources/_typeSection.js.mustache
@@ -15,7 +15,7 @@
             <tr>
                 <td>{{name}}</td>
                 <td>{{type}}</td>
-                <td>{{description}}</td>
+                <td>{{{description}}}</td>
             </tr>
             {{/properties}}
         </table>
