--- a/resources/stylesheets/docs.scss
+++ b/resources/stylesheets/docs.scss
@@ -63,7 +63,8 @@ nav {
 }
 
 section.constructor:nth-of-type(n+2),
-section.method:nth-of-type(n+2) {
+section.method:nth-of-type(n+2),
+section.typedef:nth-of-type(n+2) {
   border-top: 1px solid #ddd;
   margin-top: 50px;
 }
