added function search!

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -39,6 +39,13 @@
         <!-- Notification area for failing specs -->
         <div id="spec-failures"></div>
 
+        <div class="search">
+            <fieldset>
+                <legend>Search</legend>
+                <input type="text" name="search" placeholder="Start typing the name of a function or type" />
+            </fieldset>
+        </div>
+
         <div class="layout">
             <div class="index">
                 <nav>
