added support for @exampleHelpers tag

--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -17,6 +17,8 @@ env.addReporter(new reporterType({
   includeStackTrace: true
 }));
 
+{{{exampleHelpers}}}
+
 {{#privateMembers}}
 var {{shortName}} = {{{source}}};
 {{#methods}}
