include example helpers in generated docs

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -187,6 +187,8 @@
                         {{/methods}}
                         {{/privateMembers}}
 
+                        {{{exampleHelpers}}}
+
                         {{> examples}}
                         {{> benchmarks}}
                       });
