more robust function + type searching - see #47

--- a/resources/_typeSection.js.mustache
+++ b/resources/_typeSection.js.mustache
@@ -1,4 +1,4 @@
-<section class="typedef" id="{{identifier}}" data-filter="{{name}}">
+<section class="typedef" id="{{identifier}}" data-name="{{name}}" data-filter="{{searchName}}">
     <h1>{{name}}</h1>
 
     {{{description}}}
