--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -87,7 +87,7 @@
                 {{#namespaces}}
                 {{#allMembers}}
                 {{^excludeFromDocs}}
-                <section class="{{sectionType}}" id="{{identifier}}" data-filter="{{shortName}}">
+                <section class="{{sectionType}}" id="{{identifier}}" data-name="{{shortName}}" data-filter="{{searchName}}">
                     <h1>
                         {{shortName}}
                         <small>{{name}}</small>
