--- a/resources/_typeSection.js.mustache
+++ b/resources/_typeSection.js.mustache
@@ -1,4 +1,4 @@
-<section class="typedef" id="{{identifier}}" data-name="{{name}}" data-filter="{{searchName}}">
+<section class="typedef" id="{{identifier}}" data-name="{{lowerCaseName}}" data-acronym="{{acronym}}" data-filter="{{searchName}}">
     <h1>{{name}}</h1>
 
     {{{description}}}
