fixed potential syntax error in array head/tail matchers

--- a/resources/handlers/_array_tail.js.mustache
+++ b/resources/handlers/_array_tail.js.mustache
@@ -1,4 +1,4 @@
-var actual = {{{actual}}},
-    tail   = [{{{match.1}}}];
+var actual = {{{actual}}};
+var tail   = [{{{match.1}}}];
 
 expect(actual.slice(actual.length - tail.length)).toEqual(tail);
