--- a/resources/handlers/_array_head.js.mustache
+++ b/resources/handlers/_array_head.js.mustache
@@ -1,4 +1,4 @@
-var actual = {{{actual}}},
-    head   = [{{{match.1}}}];
+var actual = {{{actual}}};
+var head   = [{{{match.1}}}];
 
 expect(actual.slice(0, head.length)).toEqual(head);
